--- a/public/__forms.html
+++ b/public/__forms.html
@@ -6,18 +6,13 @@
     <title>Netlify Forms Detection</title>
 </head>
 <body>
-    <!-- This file is used by Netlify to detect forms for Next.js App Router -->
-    <form name="contact" data-netlify="true" hidden>
+    <!-- This file helps Netlify detect forms when using App Router -->
+    <form name="contact" method="POST" action="/contact/thanks" data-netlify="true" data-netlify-honeypot="bot-field" hidden>
+        <input type="hidden" name="form-name" value="contact" />
+        <input type="text" name="bot-field" />
         <input type="text" name="name" />
         <input type="email" name="email" />
-        <input type="text" name="institution" />
-        <select name="interest">
-            <option value="geometric-dl">Geometric Deep Learning</option>
-            <option value="quantum-gravity">Quantum Gravity</option>
-            <option value="categorical-qm">Categorical QM</option>
-            <option value="collaboration">General Collaboration</option>
-            <option value="other">Other</option>
-        </select>
+        <input type="text" name="subject" />
         <textarea name="message"></textarea>
     </form>
 </body>
